<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">Id</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="next">NEXT</string>
    <string name="this_is_shoe_store_inventory">This is shoe store inventory</string>
    <string name="you_can_add_new_shoe">You can add new shoe</string>
    <string name="name">Name:</string>
    <string name="company">Company:</string>
    <string name="size">Size:</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
</resources>