<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/padding_10dp"
        tools:context=".ui.view.LoginFragment">

        <ImageView
            android:layout_width="@dimen/img_size_200dp"
            android:layout_height="@dimen/img_size_200dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_storefront_24" />

        <TextView
            android:id="@+id/tv_id"
            style="@style/bold_20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tv_pw"
            style="@style/bold_20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account" />

    </LinearLayout>
</layout>