<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- LinearLayout: A linear layout is a good choice when configuring a simple layout. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_10dp"
        tools:context=".ui.view.InstructionFragment">

        <ImageView
            android:layout_width="@dimen/img_size_200dp"
            android:layout_height="@dimen/img_size_200dp"
            android:src="@drawable/ic_baseline_content_paste_24" />

        <TextView
            style="@style/medium_20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_is_shoe_store_inventory" />

        <TextView
            style="@style/medium_20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_can_add_new_shoe" />

        <Button
            android:id="@+id/btn_instruction_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next" />

    </LinearLayout>
</layout>